fixed spacing on event details

--- a/Funrazor/src/EventDetailsPage/EventDetailsPage.css
+++ b/Funrazor/src/EventDetailsPage/EventDetailsPage.css
@@ -54,7 +54,7 @@
     display: flex;
     flex-direction: column;
     align-content: flex-end;
-    margin-left:565px;
+    margin-left: 50px;
 }
 
 #rsvp-button {
@@ -138,7 +138,9 @@
 #event-details-back-button-container {
     display: flex;
     justify-content: space-between;
-    margin-right: 35px;
+    width: 100%; /* Ensure it takes up the full width of the enclosing div */
+    padding-right: 10px; /* Optionally, add some padding to the right to prevent it from touching the edge */
+    box-sizing: border-box;
 }
 
 #event-details-back-button-container button {
